# GMLO

./: CMakeLists.txt  LICENSE  README.md
exec/: CMakeLists.txt  kitti.cpp
include/: gicp_mapper.hpp  gicp_mp.hpp  joint_matching.hpp  polar_region_gpf.hpp
include/nanoflann/: nanoflann.hpp
include/utils/: cloud_types.hpp  libs_included.hpp  utils.hpp
result/ground_truth/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
result/proposed/: GMLO-00.txt  GMLO-01.txt  GMLO-02.txt  GMLO-03.txt  GMLO-04.txt  GMLO-05.txt  GMLO-06.txt  GMLO-07.txt  GMLO-08.txt  GMLO-09.txt  GMLO-10.txt
src/: CMakeLists.txt  gicp_mapper.cpp  gicp_mp.cpp  joint_matching.cpp  nanoflann.cpp  polar_region_gpf.cpp
